--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-PORT = 5000
-JWT_SECRET = omkar
-MONGO_URI=mongodb+srv://omkarkulkarnii:root@cluster0.qesbvph.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-# NODE_ENV = 
+PORT = port number
+JWT_SECRET = any key here
+MONGO_URI=your mongo url here
