--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT = port number
-JWT_SECRET = any key here
-MONGO_URI=your mongo url here
+PORT = 5000
+JWT_SECRET = omkar
+MONGO_URI=mongodb+srv://omkarkulkarnii:root@cluster0.qesbvph.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+REACT_APP_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dvufeofbf/image/upload
