--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT = 
-JWT_SECRET = 
-MONGO_URI=
-REACT_APP_CLOUDINARY_URL=
+PORT = 5000
+JWT_SECRET = omkar
+MONGO_URI=mongodb+srv://omkarkulkarnii:root@cluster0.qesbvph.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+REACT_APP_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dvufeofbf/image/upload
